additional color changes

--- a/nodes/core/core/20-inject.html
+++ b/nodes/core/core/20-inject.html
@@ -171,7 +171,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('inject',{
         category: 'input',
-        color:"#a6bbcf",
+        color:"#2952a3",
         defaults: {
             name: {value:""},
             topic: {value:""},
