--- a/nodes/core/core/80-function.html
+++ b/nodes/core/core/80-function.html
@@ -68,7 +68,7 @@
 
 <script type="text/javascript">
     RED.nodes.registerType('function',{
-        color:"#fdd0a2",
+        color:"#e68a00",
         category: 'function',
         defaults: {
             name: {value:""},
