--- a/nodes/core/core/58-debug.html
+++ b/nodes/core/core/58-debug.html
@@ -95,7 +95,7 @@
         labelStyle: function() {
             return this.name?"node_label_italic":"";
         },
-        color:"#87a980",
+        color:"#006600",
         inputs:1,
         outputs:0,
         icon: "debug.png",
