catch to function

--- a/nodes/core/core/25-catch.html
+++ b/nodes/core/core/25-catch.html
@@ -96,7 +96,7 @@
 </style>
 <script type="text/javascript">
     RED.nodes.registerType('catch',{
-        category: 'input',
+        category: 'function',
         color:"#e49191",
         defaults: {
             name: {value:""},
