--- a/nodes/core/core/20-inject.html
+++ b/nodes/core/core/20-inject.html
@@ -200,29 +200,31 @@
         outputs:1,
         icon: "inject.png",
         label: function() {
-            if (this.name) {
-                return this.name;
-            } else if (this.payloadType === "string" ||
-                    this.payloadType === "str" ||
-                    this.payloadType === "num" ||
-                    this.payloadType === "bool" ||
-                    this.payloadType === "json") {
-                if ((this.topic !== "") && ((this.topic.length + this.payload.length) <= 32)) {
-                    return this.topic + ":" + this.payload;
-                } else if (this.payload.length > 0 && this.payload.length < 24) {
-                    return this.payload;
-                } else {
-                    return this._("inject.inject");
-                }
-            } else if (this.payloadType === 'date') {
-                return this._("inject.timestamp")
-            } else if (this.payloadType === 'flow' && this.payload.length < 19) {
-                return 'flow.'+this.payload;
-            } else if (this.payloadType === 'global' && this.payload.length < 17) {
-                return 'global.'+this.payload;
-            } else {
-                return this._("inject.inject");
-            }
+            return this.name||"Inject";
+            // } else if (this.payloadType === "string" ||
+            //         this.payloadType === "str" ||
+            //         this.payloadType === "num" ||
+            //         this.payloadType === "bool" ||
+            //         this.payloadType === "json") {
+            //     if ((this.topic !== "") && ((this.topic.length + this.payload.length) <= 32)) {
+            //         return this.topic + ":" + this.payload;
+            //     } else if (this.payload.length > 0 && this.payload.length < 24) {
+            //         return this.payload;
+            //     } else {
+            //         return this._("inject.inject");
+            //     }
+            // } else if (this.payloadType === 'date') {
+            //     return this._("inject.timestamp")
+            // } else if (this.payloadType === 'flow' && this.payload.length < 19) {
+            //     return 'flow.'+this.payload;
+            // } else if (this.payloadType === 'global' && this.payload.length < 17) {
+            //     return 'global.'+this.payload;
+            // } else {
+            //     return this._("inject.inject");
+            // }
+        },
+        paletteLabel: function() {
+          return "Inject";
         },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
