--- a/nodes/core/io/33-feedparse.html
+++ b/nodes/core/io/33-feedparse.html
@@ -49,7 +49,7 @@
         outputs:1,
         icon: "feed.png",
         label: function() {
-            return this.name||this.url;
+            return this.name||this.url||"Feedparse";
         },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
