--- a/nodes/core/core/25-status.html
+++ b/nodes/core/core/25-status.html
@@ -88,14 +88,14 @@
 <script type="text/javascript">
     RED.nodes.registerType('status',{
         category: 'input',
-        color:"#c0edc0",
+        color:"#2952a3",
         defaults: {
             name: {value:""},
             scope: {value:null}
         },
         inputs:0,
         outputs:1,
-        icon: "alert.png",
+        icon: "alert_input.png",
         label: function() {
             return this.name||(this.scope?this._("status.statusNodes",{number:this.scope.length}):this._("status.status"));
         },
