--- a/nodes/core/io/21-httpin.html
+++ b/nodes/core/io/21-httpin.html
@@ -87,7 +87,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('http in',{
         category: 'input',
-        color:"rgb(231, 231, 174)",
+        color:"#2952a3",
         defaults: {
             name: {value:""},
             url: {value:"",required:true},
@@ -96,7 +96,7 @@
         },
         inputs:0,
         outputs:1,
-        icon: "white-globe.png",
+        icon: "globe_input.png",
         label: function() {
             if (this.name) {
                 return this.name;
