--- a/nodes/core/io/22-websocket.html
+++ b/nodes/core/io/22-websocket.html
@@ -110,10 +110,10 @@
             server: {type:"websocket-listener", validate: ws_validateserver},
             client: {type:"websocket-client", validate: ws_validateclient}
         },
-        color:"rgb(215, 215, 160)",
+        color:"#2952a3",
         inputs:0,
         outputs:1,
-        icon: "white-globe.png",
+        icon: "globe_input.png",
         labelStyle: function() {
             return this.name?"node_label_italic":"";
         },
