input color to  #1e8c88

--- a/nodes/core/io/21-httpin.html
+++ b/nodes/core/io/21-httpin.html
@@ -138,14 +138,14 @@
 
     RED.nodes.registerType('http response',{
         category: 'output',
-        color:"rgb(231, 231, 174)",
+        color:"#1e8c88",
         defaults: {
             name: {value:""}
         },
         inputs:1,
         outputs:0,
         align: "right",
-        icon: "white-globe.png",
+        icon: "globe_output.png",
         label: function() {
             return this.name||"http";
         },
