--- a/nodes/core/io/22-websocket.html
+++ b/nodes/core/io/22-websocket.html
@@ -129,10 +129,10 @@
             server: {type:"websocket-listener", validate: ws_validateserver},
             client: {type:"websocket-client", validate: ws_validateclient}
         },
-        color:"rgb(215, 215, 160)",
+        color:"#1e8c88",
         inputs:1,
         outputs:0,
-        icon: "white-globe.png",
+        icon: "globe_output.png",
         align: "right",
         labelStyle: function() {
             return this.name?"node_label_italic":"";
