function to color #c9c705

--- a/nodes/core/core/25-catch.html
+++ b/nodes/core/core/25-catch.html
@@ -97,7 +97,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('catch',{
         category: 'function',
-        color:"#e49191",
+        color:"#c9c705",
         defaults: {
             name: {value:""},
             scope: {value:null}
