--- a/nodes/core/core/80-template.html
+++ b/nodes/core/core/80-template.html
@@ -70,7 +70,7 @@
 
 <script type="text/javascript">
     RED.nodes.registerType('template',{
-        color:"rgb(243, 181, 103)",
+        color:"#c9c705",
         category: 'function',
         defaults: {
             name: {value:""},
