--- a/nodes/core/core/89-trigger.html
+++ b/nodes/core/core/89-trigger.html
@@ -87,7 +87,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('trigger',{
         category: 'function',
-        color:"#E6E0F8",
+        color:"#c9c705",
         defaults: {
             op1: {value:"1"},
             op2: {value:"0"},
