--- a/nodes/core/core/90-comment.html
+++ b/nodes/core/core/90-comment.html
@@ -36,7 +36,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('comment',{
         category: 'function',
-        color:"#ffffff",
+        color:"#c9c705",
         defaults: {
             name: {value:""},
             info: {value:""}
