--- a/nodes/core/io/21-httprequest.html
+++ b/nodes/core/io/21-httprequest.html
@@ -85,7 +85,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('http request',{
         category: 'function',
-        color:"rgb(231, 231, 174)",
+        color:"#c9c705",
         defaults: {
             name: {value:""},
             method:{value:"GET"},
