--- a/nodes/core/logic/10-switch.html
+++ b/nodes/core/logic/10-switch.html
@@ -48,7 +48,7 @@
 
 <script type="text/javascript">
     RED.nodes.registerType('switch', {
-        color: "#E2D96E",
+        color: "#c9c705",
         category: 'function',
         defaults: {
             name: {value:""},
