--- a/nodes/core/logic/15-change.html
+++ b/nodes/core/logic/15-change.html
@@ -47,7 +47,7 @@
 
 <script type="text/javascript">
     RED.nodes.registerType('change', {
-        color: "#E2D96E",
+        color: "#c9c705",
         category: 'function',
         defaults: {
             name: {value:""},
