--- a/nodes/core/logic/16-range.html
+++ b/nodes/core/logic/16-range.html
@@ -57,7 +57,7 @@
 
 <script type="text/javascript">
     RED.nodes.registerType('range', {
-        color: "#E2D96E",
+        color: "#c9c705",
         category: 'function',
         defaults: {
             minin: {value:"",required:true,validate:RED.validators.number()},
