--- a/nodes/core/parsers/70-CSV.html
+++ b/nodes/core/parsers/70-CSV.html
@@ -83,7 +83,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('csv',{
         category: 'function',
-        color:"#DEBD5C",
+        color:"#c9c705",
         defaults: {
             name: {value:""},
             sep: {value:',',required:true,validate:RED.validators.regex(/^.{1,2}$/)},
