--- a/nodes/core/parsers/70-HTML.html
+++ b/nodes/core/parsers/70-HTML.html
@@ -54,7 +54,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('html',{
         category: 'function',
-        color:"#DEBD5C",
+        color:"#c9c705",
         defaults: {
             name: {value:""},
             tag: {value:""},
