--- a/nodes/core/core/89-delay.html
+++ b/nodes/core/core/89-delay.html
@@ -91,7 +91,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('delay',{
         category: 'function',
-        color:"#E6E0F8",
+        color:"#c9c705",
         defaults: {
             name: {value:""},
             pauseType: {value:"delay", required:true},
