--- a/nodes/core/parsers/70-JSON.html
+++ b/nodes/core/parsers/70-JSON.html
@@ -30,7 +30,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('json',{
         category: 'function',
-        color:"#DEBD5C",
+        color:"#c9c705",
         defaults: {
             name: {value:""}
         },
