--- a/nodes/core/parsers/70-XML.html
+++ b/nodes/core/parsers/70-XML.html
@@ -45,7 +45,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('xml',{
         category: 'function',
-        color:"#DEBD5C",
+        color:"#c9c705",
         defaults: {
             name: {value:""},
             attr: {value:""},
