--- a/nodes/core/core/89-trigger.html
+++ b/nodes/core/core/89-trigger.html
@@ -110,6 +110,9 @@
                 return this.name|| this._("trigger.label.trigger-block");
             }
         },
+        paletteLabel: function() {
+          return "Inject";
+        },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
         },
