fix iot cloud node

--- a/nodes/xively/salesforceIOT.html
+++ b/nodes/xively/salesforceIOT.html
@@ -27,13 +27,13 @@
     outputs: 0,
     icon: "sf_blue.png", 
     label: function () {
-      return this.name || 'Input Connection';
+      return this.name || 'SFDC IoT Cloud Input';
     },
     labelStyle: function () {
       return '';
     },
     paletteLabel: function() {
-      return "Input Connection";
+      return "SFDC IoT Cloud Input";
     }
   });
 </script>
