--- a/nodes/xively/salesforce.html
+++ b/nodes/xively/salesforce.html
@@ -191,7 +191,7 @@
   </div>
   <div class="form-row">
     <label for="node-input-description"><i class="fa fa-paragraph"></i> Description</label>
-    <input type="text" id="node-input-extname" placeholder="description">
+    <input type="text" id="node-input-description" placeholder="description">
   </div>
   <div class="form-row">
     <label for="node-input-priority"><i class="fa fa-list-ol"></i> Priority</label>
